--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -88,6 +88,12 @@
     <Compile Include="src\PC\Devices\KUKA\Limits\RobotLimits.cs" />
     <Compile Include="src\PC\Devices\KUKA\Limits\WorkspaceLimits.cs" />
     <Compile Include="src\PC\Devices\KUKA\TrajectoryGenerator5.cs" />
+    <Compile Include="src\PC\Views\CollisionTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\PC\Views\CollisionTest.Designer.cs">
+      <DependentUpon>CollisionTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\PC\Views\CommandLineWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,6 +157,9 @@
     </Compile>
     <EmbeddedResource Include="src\PC\Views\CalibrationWindow.resx">
       <DependentUpon>CalibrationWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\PC\Views\CollisionTest.resx">
+      <DependentUpon>CollisionTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\PC\Views\CommandLineWindow.resx">
       <DependentUpon>CommandLineWindow.cs</DependentUpon>
