--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -202,6 +202,8 @@
   <ItemGroup>
     <Content Include="ping-pong.ico" />
     <Content Include="src\Kuka\RSI_EthernetConfig.xml" />
+    <Content Include="src\PC\predkosc.PNG" />
+    <Content Include="src\PC\predkosc2.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
