--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -78,8 +78,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\PC\Applications\Ping.cs" />
-    <Compile Include="src\PC\Applications\PingFlyVertically.cs" />
-    <Compile Include="src\PC\Applications\PingJuggleVertically.cs" />
+    <Compile Include="src\PC\Applications\PingPong.cs" />
     <Compile Include="src\PC\Commands\ClearCommand.cs" />
     <Compile Include="src\PC\Commands\ICommand.cs" />
     <Compile Include="src\PC\Commands\CommandArgs.cs" />
@@ -92,6 +91,7 @@
     <Compile Include="src\PC\Devices\KUKA\TrajectoryGenerator5v1.cs" />
     <Compile Include="src\PC\Devices\KUKA\TrajectoryGenerator5.cs" />
     <Compile Include="src\PC\Devices\KUKA\TrajectoryGenerator5v2.cs" />
+    <Compile Include="src\PC\Maths\PIDRegulator.cs" />
     <Compile Include="src\PC\Views\CollisionTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,11 +126,11 @@
     <Compile Include="src\PC\Views\CORTester.Designer.cs">
       <DependentUpon>CORTester.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\PC\Views\RobotDataPanel.cs">
+    <Compile Include="src\PC\Views\RobotDataMonitor.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="src\PC\Views\RobotDataPanel.Designer.cs">
-      <DependentUpon>RobotDataPanel.cs</DependentUpon>
+    <Compile Include="src\PC\Views\RobotDataMonitor.Designer.cs">
+      <DependentUpon>RobotDataMonitor.cs</DependentUpon>
     </Compile>
     <Compile Include="src\PC\Maths\Algebra\Transformation.cs" />
     <Compile Include="src\PC\Devices\KUKA\TrajectoryGenerator3.cs" />
@@ -183,8 +183,8 @@
     <EmbeddedResource Include="src\PC\Views\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\PC\Views\RobotDataPanel.resx">
-      <DependentUpon>RobotDataPanel.cs</DependentUpon>
+    <EmbeddedResource Include="src\PC\Views\RobotDataMonitor.resx">
+      <DependentUpon>RobotDataMonitor.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="src\Docs\eggert_comparison_mva97.pdf" />
