--- a/PingPong/packages.config
+++ b/PingPong/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="4.12.0" targetFramework="net472" />
+  <package id="MathNet.Numerics" version="4.14.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OptiTrack.NatNet" version="2.8.0" targetFramework="net472" />
 </packages>
